...
        if let profile = profileService?.profile {
            view?.updateProfileDetails(with: profile)
        }
    }
    
    private func getLogoutAlertModel() -> AlertModel {
        let alertModel = AlertModel(title: "Пока, пока!", message: "Уверены что хотите выйти?", buttons: [
            AlertModel.Button(buttonText: "Да", actionHandler: { _ in
                guard let profileLogoutService = self.profileLogoutService else {
                    preconditionFailure("Logout servise has not setup")
                }
                profileLogoutService.logout()
                self.gotoSplashScreen()
            }, style: .destructive),
...
