...
        button.backgroundColor = .ypWhite
        button.setTitle("Войти", for: .normal)
        button.titleLabel?.font = UIFont(name: Constants.Font.ysDisplayBold, size: 17)
        button.setTitleColor(UIColor(named: Constants.Color.ypBlack), for: .normal)
        button.addTarget(self, action: #selector(didTapButton), for: .touchUpInside)
        button.layer.cornerRadius = 16
        button.accessibilityIdentifier = "Authenticate"
        button.translatesAutoresizingMaskIntoConstraints = false
        return button
    }()
    
    // MARK: - life cycle
        
...
